# raynaldo-reborn

./: Cargo.toml
assets/worlds/: balls.toml  cornell_box.toml  dragon80k.toml  dragon8k.toml
src/: main.rs  raytracer.rs
src/app/: canvas.wgsl  gui.rs  gui_framework.rs  mod.rs  renderer.rs  winit_app.rs
src/raytracer/: camera.rs  loader.rs  material.rs  world.rs
src/raytracer/tracer/: embree.rs  mod.rs  naive.rs
