[package]
name = "raynaldo-reborn"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
egui-wgpu = "0.31.1"
egui-winit = "0.31.1"
pollster = "0.4.0"
rand = "0.9.0"
rayon = "1.10.0"
wgpu = "24.0.1"
winit = "0.30.9"
# FIXME: use original winit_input_helper repository once merged
winit_input_helper = { git = "https://github.com/mrfoogles/winit_input_helper", branch = "main" }
glam = { version = "0.30.1", features = ["rand"] }
image = "0.25.6"
